feat: Update README for JavaFX transition and add running instructions feat: Enhance App.java with observable lists for inventory and cart management feat: Add initial sales data to sales.csv